--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header {
 footer{
     height: 50px;
     margin-top: 250px;
-    background-color: #5A7D7C;
+    background-color: #4CB5AE;
     color: white;
     display: flex;
     justify-content: center;
